--- a/pom.xml
+++ b/pom.xml
@@ -98,13 +98,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://192.168.33.11:8081/repository/first_project1/</url>
+	      <url>http://192.168.33.11:8081/repository/first/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://192.168.33.11:8081/repository/first_project/</url>
+	      <url>http://192.168.33.11:8081/repository/first1/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
